# gizmoa-schedule-cli

./: Cargo.toml  README.md
src/: color.rs  main.rs  model.rs  parser.rs  vectorial.rs
