[package]
name = "gizmoa-schedule-ext"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39"}
clap = { version = "4.5.29", features = ["derive"] }
hex_color = { version = "3.0.0", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_with = "3.12.0"
strum = "0.27.1"
strum_macros = "0.27.1"
svg = "0.18.0"
